Install script improved and macOS fixes.